@@ -76,6 +76,7 @@ int denora_event_svsnick(char *source, int ac, char **av);
 int denora_event_sanick(char *source, int ac, char **av);
 int denora_event_svsjoin(char *source, int ac, char **av);
 int denora_event_eob(char *source, int ac, char **av);
+int denora_event_push(char *source, int ac, char **av);
 
 int sjtoken(char *message, char delimiter, char **parv);
 
