@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="41"
+VERSION_BUILD="42"
 
 # $Log$
+#
+# BUILD : 1.3.0.42 (SVN)
+# BUGS  : 382
+# NOTES : Fixed MOTD/Ulines/Uptime on inspircd11
 #
 # BUILD : 1.3.0.41 (SVN)
 # BUGS  : 381
